[tool.poetry]
name = "payment"
version = "0.1.0"
description = ""
authors = ["rfedorov <rfedorov@linkentools.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.2"
SQLAlchemy = "^1.3.17"
pydantic = {extras = ["email"], version = "^1.5.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
uvicorn = "^0.11.5"
flake8 = "^3.8.1"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.1.1"
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
alembic = "^1.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
